--- a/demo2/index.html
+++ b/demo2/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
 	<p> Terse maailma! </p>
-	<img src="kurkkumopo.jfif" alt="Kurkkumopooo">
+	<img src="kurkkumopo.jpg" alt="Kurkkumopooo">
     </body>
 </html>
