--- a/demo3/index.html
+++ b/demo3/index.html
@@ -51,7 +51,7 @@
 
                 <div class="navbar-header">
                    
-                    <a class="site-title"><span>Agency</span>Perfect</a>
+                    <a class="site-title"><span>Joku</span>Sivu</a>
 
                 </div><!-- /.navbar-header -->
 
@@ -59,18 +59,18 @@
 
                     <ul class="nav navbar-nav navbar-right">
 
-                        <li class="active"><a href="index.html" data-toggle="dropdown">Home</a></li>
-                        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages<i class="fa fa-caret-down hidden-xs" aria-hidden="true"></i></a>
+                        <li class="active"><a href="index.html" data-toggle="dropdown">Kotisivu</a></li>
+                        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Sivut<i class="fa fa-caret-down hidden-xs" aria-hidden="true"></i></a>
 
                             <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
                               <li><a href="portfolio.html">Portfolio</a></li>
-                              <li><a href="blog.html">Blog</a></li>
+                              <li><a href="blog.html">Blogi</a></li>
                             </ul>
 
                         </li>
                         <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="blog.html">Blogi</a></li>
+                        <li><a href="contact.html">Ota yhteyttä</a></li>
                         <li><a href="ui-elements.html">UI Elements</a></li>
 
                     </ul>
@@ -97,8 +97,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-5">
-                        <h2>Responsive web design</h2>
-                        <p>Responsive Web design is the approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation. The practice consists of a mix of flexible grids and layouts, images and an intelligent use of CSS media queries</p>
+                        <h2>Responsiivinen web-suunnittelu</h2>
+                        <p>Responsiivinen web-suunnittelu...</p>
                     </div>
                     <div class="col-sm-7 hidden-xs">
                         <img src="assets/img/kurkkumopo.jpg" alt="">
@@ -110,63 +110,63 @@
         <section class="site-section section-portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="heading-separator">Latest Work</h2>
-                    <p class="subheading-text">This is some of our best work</p>
+                    <h2 class="heading-separator">Viimeisimmät työt</h2>
+                    <p class="subheading-text">Nämä ova parhaimpia töitämme</p>
                 </div>
                 <div class="row">
                     <div class="col-lg-3 col-md-4 col-xs-6">
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-1.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Portfolio item</h4>
+                            <h4 class="portfolio-item-title">Portfolio esineitä</h4>
                             <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
                     <div class="col-lg-3 col-md-4 col-xs-6">
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-2.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Portfolio item</h4>
+                            <h4 class="portfolio-item-title">Portfolio esineitä</h4>
                             <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
                     <div class="col-lg-3 col-md-4 col-xs-6">
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-3.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Portfolio item</h4>
+                            <h4 class="portfolio-item-title">Portfolio esineitä</h4>
                             <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
                     <div class="col-lg-3 col-md-4 col-xs-6">
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-4.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Portfolio item</h4>
+                            <h4 class="portfolio-item-title">Portfolio esineitä</h4>
                             <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
                     <div class="col-lg-3 col-md-4 col-xs-6">
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-5.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Portfolio item</h4>
+                            <h4 class="portfolio-item-title">Portfolio esineitä</h4>
                             <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
                     <div class="col-lg-3 col-md-4 col-xs-6">
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-6.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Portfolio item</h4>
+                            <h4 class="portfolio-item-title">Portfolio esineitä</h4>
                             <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
                     <div class="col-lg-3 col-md-4 col-xs-6">
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-1.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Portfolio item</h4>
+                            <h4 class="portfolio-item-title">Portfolio esineitä</h4>
                             <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
                     <div class="col-lg-3 col-md-4 col-xs-6">
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-2.jpg" class="img-res" alt="">
-                            <h4 class="portfolio-item-title">Portfolio item</h4>
+                            <h4 class="portfolio-item-title">Portfolio esineitä</h4>
                             <a href="portfolio-item.html"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -177,63 +177,63 @@
 
         <section class="site-section section-services gray-bg text-center">
             <div class="container">
-                <h2 class="heading-separator">Our Services</h2>
-                <p class="subheading-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+                <h2 class="heading-separator">Meidän palvelumme</h2>
+                <p class="subheading-text">Lorem Ipsum on jokin ihme palvelu</p>
                 <div class="row">
                     <div class="col-md-3 col-xs-6">
                         <div class="service">
                             <img src="assets/img/anchor.svg" alt="">
-                            <h3 class="service-title">Branding</h3>
-                            <p class="service-info"> Learn why your brand is a valuable component when it comes to your marketing communication and why you don't want to be without one.</p>
+                            <h3 class="service-title">Brandisonti</h3>
+                            <p class="service-info"> Opi miksi brandisointi on tärkeä osa marketointia ja miksi haluat sellaisen.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="service">
                             <img src="assets/img/bycicle.svg" alt="">
-                            <h3 class="service-title">Design</h3>
-                            <p class="service-info">The strength of a design lies as much in the steps taken to create it as in the final result. </p>
+                            <h3 class="service-title">Suunnittelu</h3>
+                            <p class="service-info">Suunnitelun jotain juttui </p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="service">
                             <img src="assets/img/paper-plane.svg" alt="">
-                            <h3 class="service-title">Development</h3>
-                            <p class="service-info">Development is a way to make people aware of the services and/or products you are offering.</p>
+                            <h3 class="service-title">Kehittyminen</h3>
+                            <p class="service-info">Kehittyminen on...</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="service">
                             <img src="assets/img/photo.svg" alt="">
-                            <h3 class="service-title">Photography</h3>
-                            <p class="service-info">Photographs are the legacy you leave for generations to come.</p>
+                            <h3 class="service-title">Kuvaamienen</h3>
+                            <p class="service-info">Kuvat ovat...</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="service">
                             <img src="assets/img/microphone.svg" alt="">
-                            <h3 class="service-title">Support</h3>
-                            <p class="service-info">A support network can include a variety of forms of interaction with a range of people who can support you in different ways. </p>
+                            <h3 class="service-title">Tuki</h3>
+                            <p class="service-info">Tuki... </p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="service">
                             <img src="assets/img/rocket.svg" alt="">
-                            <h3 class="service-title">Marketing</h3>
-                            <p class="service-info">Marketing is of vital importance to any business. It is the key process of researching, promoting and selling products or services to your target.</p>
+                            <h3 class="service-title">Marketointi</h3>
+                            <p class="service-info">Marketointi...</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="service">
                             <img src="assets/img/basket.svg" alt="">
-                            <h3 class="service-title">Ecommerce</h3>
-                            <p class="service-info">When customers are deciding on a purchase, they start by looking online.</p>
+                            <h3 class="service-title">Verkkokauppa</h3>
+                            <p class="service-info">Kun asiakkaat päättävät mitä ostavat, alottavat he verkkokaupoista.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="service">
                             <img src="assets/img/chemestry.svg" alt="">
-                            <h3 class="service-title">Coding</h3>
-                            <p class="service-info">We use the best coding practices</p>
+                            <h3 class="service-title">Koodaaminen</h3>
+                            <p class="service-info">Käytämme parhimpia koodaus harjoituksia</p>
                         </div><!-- /.service -->
                     </div>
                 </div>
@@ -243,32 +243,32 @@
         <section class="site-section section-map-feature text-center">
 
             <div class="container">
-                <h2>Responsive Web Design</h2>
-                <p>Web design is responsive design. Responsive web design is web design, done right.</p>
-                <a href="#" class="btn btn-fill">Learn More</a>
+                <h2>Responsiivinen web-suunnittelu</h2>
+                <p>Web-suunnittelu on Responsiivista web-suunnittelua. Responsiivinen web-suunnittelu on web suunnitelua, oikein tehtynä.</p>
+                <a href="#" class="btn btn-fill">Opi lisää</a>
                 <div class="row">
                     <div class="col-sm-3 col-xs-6">
                         <div class="counter-item">
-                            <p class="counter" data-to="377" data-speed="2000">0</p>
-                            <h3>Cofee Cups</h3>
+                            <p class="counter" data-to="420" data-speed="2000">0</p>
+                            <h3>Kahvi kuppia</h3>
                         </div><!-- /.counter-item -->
                     </div>
                     <div class="col-sm-3 col-xs-6">
                         <div class="counter-item">
                             <p class="counter" data-to="1204" data-speed="2000">0</p>       
-                            <h3>Projects completed</h3>
+                            <h3>Projektia suoritettuna</h3>
                         </div> <!-- /.counter-item -->      
                     </div>
                     <div class="col-sm-3 col-xs-6">
                         <div class="counter-item">
                             <p class="counter" data-to="459" data-speed="1000">0</p>
-                            <h3>Happy Clients</h3>
+                            <h3>Iloisia asiakkaita</h3>
                         </div><!-- /.counter-item -->
                     </div>
                     <div class="col-sm-3 col-xs-6">
                         <div class="counter-item">
                             <p class="counter" data-to="675" data-speed="1000">0</p>
-                            <h3>Average Deal</h3>
+                            <h3>Keskimäärin sopimuksia</h3>
                         </div><!-- /.counter-item -->
                     </div>
                 </div>
@@ -286,14 +286,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-4 col-xs-6">
-                    <a class="site-title"><span>Agency</span>Perfect</a>
-                    <p>We're a digital agency focused on creative and results-driven solutions.</p>
-                    <p>We measure our success by the results we drive for our clients.</p>
+                    <a class="site-title"><span>Joku</span>Sivu</a>
+                    <p>Koulu tehtävää varten tehty</p>
+                    <p>Moi, mite menee</p>
                 </div>
                 <div class="col-lg-offset-4 col-md-3 col-sm-4 col-md-offset-2 col-sm-offset-0 col-xs-6 ">
-                    <h3>Keep in touch</h3>
+                    <h3>Oa yhteyttä</h3>
                     <ul class="list-unstyled contact-links">
-                        <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:info@agencyperfect.com">info@agencyperfect.com</a></li>
+                        <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:samuel.johansson@opp.keuda.fi">samuel.johansson@keuda.fi</a></li>
                         <li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:+37400800000">+374 (00) 80 00 00 </a></li>
                         <li><i class="fa fa-fax" aria-hidden="true"></i><a href="+37400900000">+374 (00) 90 00 00</a></li>
                         <li><i class="fa fa-map-marker" aria-hidden="true"></i><p>20 Leo, Armenia</p></li>
@@ -303,10 +303,10 @@
                 <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                     <h3>Featured links</h3>
                     <ul class="list-unstyled">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li class="active"><a href="index.html">Kotisivu</a></li>
+                        <li><a href="blog.html">Blogi</a></li>
                         <li><a href="portfolio.html">Porfolio</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="contact.html">Yhteyden otto</a></li>
                     </ul>
                 </div>
             </div>
@@ -324,8 +324,8 @@
                     </div>
                     <div class="col-xs-4">
                         <div class="text-right">
-                            <p>&copy; AgencyPerfect</p>
-                            <p>All Rights Reserved</p>
+                            <p>&copy; JokuSivu</p>
+                            <p>Kaikki oikeudet pidetään</p>
                         </div>
                     </div>
                 </div>
