--- a/demo3/index.html
+++ b/demo3/index.html
@@ -62,7 +62,7 @@
                         <li class="active"><a href="index.html" data-toggle="dropdown">Kotisivu</a></li>
                         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Sivut<i class="fa fa-caret-down hidden-xs" aria-hidden="true"></i></a>
 
-                            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="menu">
                               <li><a href="portfolio.html">Portfolio</a></li>
                               <li><a href="blog.html">Blogi</a></li>
                             </ul>
