--- a/demo3/index.html
+++ b/demo3/index.html
@@ -60,18 +60,12 @@
                     <ul class="nav navbar-nav navbar-right">
 
                         <li class="active"><a href="index.html" data-toggle="dropdown">Kotisivu</a></li>
-                        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Sivut<i class="fa fa-caret-down hidden-xs" aria-hidden="true"></i></a>
+                        
 
-                            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                              <li><a href="portfolio.html">Portfolio</a></li>
-                              <li><a href="blog.html">Blogi</a></li>
-                            </ul>
 
-                        </li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="blog.html">Blogi</a></li>
-                        <li><a href="contact.html">Ota yhteyttä</a></li>
-                        <li><a href="ui-elements.html">UI Elements</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#palvelu">Palvelumme</a></li>
+                        <li><a href="#loppu">Ota yhteyttä</a></li>
 
                     </ul>
 
@@ -85,8 +79,8 @@
         <div class="hero-content">
             <div class="hero-text">
                 <h1>Tarinasi alkaa tästä!.</h1>
-                <p>Emt jotai tekstiä.</p>
-                <a href="#" class="btn btn-border">En jaksa vaihtaa</a>
+                <p>Asiakkaasi odottavat. Opi vastaan ottamaan heidät.</p>
+                <a href="#" class="btn btn-border">Opi lisää</a>
             </div><!-- /.hero-text -->
         </div><!-- /.hero-content -->
     </div><!-- /.hero -->
@@ -98,16 +92,17 @@
                 <div class="row">
                     <div class="col-sm-5">
                         <h2>Responsiivinen web-suunnittelu</h2>
-                        <p>Responsiivinen web-suunnittelu...</p>
+                        <p>Responsiivinen Web-suunnittelu on lähestymistapa, joka ehdottaa, että suunnittelun ja kehityksen tulisi vastata käyttäjän käyttäytymiseen ja ympäristöön näytön koon, alustan ja suunnan perusteella. Käytäntö koostuu joustavien ruudukoiden ja asettelujen, kuvien ja CSS-mediakyselyjen älykkäästä käytöstä.</p>
                     </div>
                     <div class="col-sm-7 hidden-xs">
-                        <img src="assets/img/kurkkumopo.jpg" alt="">
+                        <img src="assets/img/laptop.jpeg" alt="">
                     </div>
                 </div>
             </div>
         </section><!-- /.section-features -->
-
+        <a id="portfolio"></a>
         <section class="site-section section-portfolio">
+
             <div class="container">
                 <div class="text-center">
                     <h2 class="heading-separator">Viimeisimmät työt</h2>
@@ -174,7 +169,7 @@
             </div>
         </section><!-- /.section-portfolio -->
 
-
+        <a id="palvelu" ></a>
         <section class="site-section section-services gray-bg text-center">
             <div class="container">
                 <h2 class="heading-separator">Meidän palvelumme</h2>
@@ -184,56 +179,56 @@
                         <div class="service">
                             <img src="assets/img/anchor.svg" alt="">
                             <h3 class="service-title">Brandisonti</h3>
-                            <p class="service-info"> Opi miksi brandisointi on tärkeä osa marketointia ja miksi haluat sellaisen.</p>
+                            <p class="service-info"> Opi, miksi brändisi on arvokas komponentti markkinointiviestinnän suhteen ja miksi et halua olla ilman sellaista.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="service">
                             <img src="assets/img/bycicle.svg" alt="">
                             <h3 class="service-title">Suunnittelu</h3>
-                            <p class="service-info">Suunnitelun jotain juttui </p>
+                            <p class="service-info">Suunnittelun vahvuus on yhtä paljon sen luomiseksi toteutetuissa vaiheissa kuin lopputuloksessa. </p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="service">
                             <img src="assets/img/paper-plane.svg" alt="">
-                            <h3 class="service-title">Kehittyminen</h3>
-                            <p class="service-info">Kehittyminen on...</p>
+                            <h3 class="service-title">Kehitys</h3>
+                            <p class="service-info">Kehitys on tapa saada ihmiset tietoisiksi tarjoamistasi palveluista ja /tai tuotteista.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="service">
                             <img src="assets/img/photo.svg" alt="">
                             <h3 class="service-title">Kuvaamienen</h3>
-                            <p class="service-info">Kuvat ovat...</p>
+                            <p class="service-info">Valokuvat ovat perintö, jonka jätät tuleville sukupolville.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="service">
                             <img src="assets/img/microphone.svg" alt="">
                             <h3 class="service-title">Tuki</h3>
-                            <p class="service-info">Tuki... </p>
+                            <p class="service-info">Tukiverkosto voi sisältää erilaisia vuorovaikutusmuotoja useiden sellaisten ihmisten kanssa, jotka voivat tukea sinua eri tavoin.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="service">
                             <img src="assets/img/rocket.svg" alt="">
                             <h3 class="service-title">Marketointi</h3>
-                            <p class="service-info">Marketointi...</p>
+                            <p class="service-info">Markkinointi on elintärkeää kaikille yrityksille. Se on keskeinen prosessi tuotteiden tai palvelujen tutkimiseen, edistämiseen ja myyntiin tavoitteeseesi.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="service">
                             <img src="assets/img/basket.svg" alt="">
                             <h3 class="service-title">Verkkokauppa</h3>
-                            <p class="service-info">Kun asiakkaat päättävät mitä ostavat, alottavat he verkkokaupoista.</p>
+                            <p class="service-info">Kun asiakkaat päättävät ostoksesta, he aloittavat etsimällä verkosta.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="service">
                             <img src="assets/img/chemestry.svg" alt="">
                             <h3 class="service-title">Koodaaminen</h3>
-                            <p class="service-info">Käytämme parhimpia koodaus harjoituksia</p>
+                            <p class="service-info">Käytämme parhaita koodauskäytäntöjä</p>
                         </div><!-- /.service -->
                     </div>
                 </div>
@@ -262,7 +257,7 @@
                     <div class="col-sm-3 col-xs-6">
                         <div class="counter-item">
                             <p class="counter" data-to="459" data-speed="1000">0</p>
-                            <h3>Iloisia asiakkaita</h3>
+                            <h3>Iloista asiakkaita</h3>
                         </div><!-- /.counter-item -->
                     </div>
                     <div class="col-sm-3 col-xs-6">
@@ -281,17 +276,17 @@
         
 
     </main><!-- /#main -->
-
+    <a id="loppu"></a>
     <footer id="colophon" class="site-footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-4 col-xs-6">
                     <a class="site-title"><span>Joku</span>Sivu</a>
-                    <p>Koulu tehtävää varten tehty</p>
-                    <p>Moi, mite menee</p>
+                    <p>Olemme luovaan ja tuloshakuiseen ratkaisuihin keskittyvä digitaalinen toimisto.</p>
+                    <p>Mittaamme menestystämme tuloksilla, joita ajamme asiakkaillemme.</p>
                 </div>
                 <div class="col-lg-offset-4 col-md-3 col-sm-4 col-md-offset-2 col-sm-offset-0 col-xs-6 ">
-                    <h3>Oa yhteyttä</h3>
+                    <h3>Ota yhteyttä</h3>
                     <ul class="list-unstyled contact-links">
                         <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:samuel.johansson@opp.keuda.fi">samuel.johansson@keuda.fi</a></li>
                         <li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:+37400800000">+374 (00) 80 00 00 </a></li>
@@ -300,27 +295,13 @@
                     </ul>
                 </div>
                 <div class="clearfix visible-xs"></div>
-                <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-                    <h3>Featured links</h3>
-                    <ul class="list-unstyled">
-                        <li class="active"><a href="index.html">Kotisivu</a></li>
-                        <li><a href="blog.html">Blogi</a></li>
-                        <li><a href="portfolio.html">Porfolio</a></li>
-                        <li><a href="contact.html">Yhteyden otto</a></li>
-                    </ul>
-                </div>
+
             </div>
         </div>
         <div class="copyright">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-8">
-                        <div class="social-links">
-                            <a class="twitter-bg" href="#"><i class="fa fa-twitter"></i></a>
-                            <a class="facebook-bg" href="#"><i class="fa fa-facebook"></i></a>
-                            <a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
-                            <a class="linkedin-bg" href="#"><i class="fa fa-linkedin"></i></a>
-                        </div><!-- /.social-links -->
                     </div>
                     <div class="col-xs-4">
                         <div class="text-right">
