--- a/demo3/index.html
+++ b/demo3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
 
     <!-- Basic Page Needs
@@ -15,7 +15,7 @@
 
     <!-- Mobile Specific Metas
     ================================================== -->
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <!-- Fonts -->
