--- a/demo3/index.html
+++ b/demo3/index.html
@@ -15,7 +15,7 @@
 
     <!-- Mobile Specific Metas
     ================================================== -->
-    <meta name="viewport" content="">
+    <meta name="viewport" content="width=device-width">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <!-- Fonts -->
