--- a/demo3/index.html
+++ b/demo3/index.html
@@ -288,7 +288,7 @@
                 <div class="col-lg-offset-4 col-md-3 col-sm-4 col-md-offset-2 col-sm-offset-0 col-xs-6 ">
                     <h3>Ota yhteyttä</h3>
                     <ul class="list-unstyled contact-links">
-                        <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:samuel.johansson@opp.keuda.fi">samuel.johansson@keuda.fi</a></li>
+                        <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:samuel.johansson@opp.keuda.fi">Samuel.Johansson@keuda.fi</a></li>
                         <li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:+37400800000">+374 (00) 80 00 00 </a></li>
                         <li><i class="fa fa-fax" aria-hidden="true"></i><a href="+37400900000">+374 (00) 90 00 00</a></li>
                         <li><i class="fa fa-map-marker" aria-hidden="true"></i><p>20 Leo, Armenia</p></li>
